<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Consumption Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_record">Add Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="calculate_consumption">Calculate Consumption</string>
    <string name="edit_record">Edit Record</string>
    <string name="splash_screen">Welcome!</string>
    <string name="get_registration">Registration Info</string>
    <string name="add_record_details">Details of record to add</string>
    <string name="registration_number">Registration#</string>
    <string name="date_label">Date:</string>
    <string name="odometer_label">Odometer:</string>
    <string name="litres_label">Litres:</string>
    <string name="cost_label">Cost:</string>
    <string name="date_text">yyyy-dd-mm</string>
    <string name="odometer_text">odometer</string>
    <string name="litres_text">litres</string>
    <string name="cost_text">cost</string>
    <string name="pick_date">Pick Date</string>
    <string name="save_record">Save record</string>
    <string name="enter_vehicle_registration">Enter Vehicle Registration</string>
    <string name="main_menu">Main Menu</string>
    <string name="search_record_heading">Search Record</string>
    <string name="search">Search</string>
    <string name="date_hint">Display date</string>

</resources>